# fastpoker-arcium

./: .gitignore  Anchor.toml  Arcium.toml  Cargo.toml  build-anchor.sh  deploy.sh  package.json
contracts/: Cargo.toml  README.md  build-quick.sh  build.sh  create_token.sh  get_program_id.sh  initialize_pool.sh  start-local-validator.sh
contracts/api/: Cargo.toml
contracts/api/src/: consts.rs  error.rs  instruction.rs  lib.rs  sdk.rs  state.rs
contracts/program/: Cargo.toml
contracts/program/src/: advance_epoch.rs  burn_stake.rs  cancel_buyin.rs  claim_all.rs  claim_pending_withdrawal.rs  claim_refined.rs  claim_stake_rewards.rs  create_pending_withdrawal.rs  create_table.rs  credit_unrefined_from_program.rs  deal_cards.rs  delegate_table.rs  deposit_public_revenue.rs  deposit_rake.rs  deposit_revenue.rs  init_unrefined.rs  initialize.rs  join_table.rs  join_table_free.rs  leave_table.rs  lib.rs  mint_unrefined.rs  notify_pool_sol_deposit.rs  player_action.rs  record_poker_rake.rs  register_player.rs  settle_hand.rs  transfer_mint_authority.rs  trigger_timeout.rs
contracts/scripts/: initialize.ts
programs/fastpoker/: Cargo.toml
programs/fastpoker/src/: constants.rs  errors.rs  events.rs  hand_eval.rs  lib.rs  side_pots.rs
programs/fastpoker/src/instructions/: abort_starting.rs  admin_close_accounts.rs  admin_close_table.rs  admin_fix_table.rs  admin_list_token.rs  admin_recover_vault.rs  admin_remove_player.rs  admin_reset_vault.rs  arcium_claim_cards_callback.rs  arcium_claim_cards_queue.rs  arcium_deal.rs  arcium_deal_callback.rs  arcium_reveal.rs  arcium_reveal_queue.rs  arcium_showdown.rs  arcium_showdown_queue.rs  award_xp.rs  cancel_hand.rs  claim_creator_rake.rs  claim_rake_reward.rs  claim_sol_winnings.rs  (+52 more)
(+508 files in other folders)
