[workspace]
resolver = "2"
members = ["api", "program"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
homepage = ""
documentation = ""
repository = ""
readme = "./README.md"
keywords = ["solana", "poker", "staking"]

[workspace.dependencies]
poker-api = { path = "./api" }
bytemuck = "1.14.3"
num_enum = "0.7.2"
solana-program = "^2.1"
steel = { version = "4.0.4", features = ["spl"] }
thiserror = "1.0.57"
spl-token = { version = "^4", features = ["no-entrypoint"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1


